# absurder-sql

./: .gitignore  .npmignore  Cargo.toml  DEMO_GUIDE.md  MULTI_TAB_COORDINATION.md  PERSONAL.md  PLAN.md  PROGRESS.md  README.md  TRANSACTION_SUPPORT.md  WASM-TEST.md  check_braces.py  demo.html  graph.db  package.json  playwright.config.js  serve.py  sql_demo.js  webpack.worker.config.js  working_wasm_tests.html
.cargo/: config.toml
absurder-sql-mobile/: .env.example  .gitignore  AbsurderSQL.podspec  Cargo.toml  README.md  build.rs  jest.config.js  package.json  react-native.config.js  setup_environment.py  tsconfig.json  ubrn.config.yaml
absurder-sql-mobile/.cargo/: config.toml
absurder-sql-mobile/AbsurderSqlMobileFramework.xcframework/: Info.plist
absurder-sql-mobile/absurdersql_storage/test/: database.sqlite
absurder-sql-mobile/absurdersql_storage/uniffi_exec_simple_ThreadId(80)/: database.sqlite
absurder-sql-mobile/absurdersql_storage/uniffi_exec_simple_ThreadId(84)/: database.sqlite
absurder-sql-mobile/absurdersql_storage/uniffi_params_injection_ThreadId(5)/: database.sqlite
absurder-sql-mobile/absurdersql_storage/uniffi_params_injection_ThreadId(82)/: database.sqlite
absurder-sql-mobile/absurdersql_storage/uniffi_params_insert_ThreadId(79)/: database.sqlite
absurder-sql-mobile/absurdersql_storage/uniffi_params_select_ThreadId(81)/: database.sqlite
absurder-sql-mobile/absurdersql_storage/uniffi_tx_commit_ThreadId(89)/: database.sqlite
absurder-sql-mobile/absurdersql_storage/uniffi_tx_nested_ThreadId(91)/: database.sqlite
absurder-sql-mobile/absurdersql_storage/uniffi_tx_rollback_ThreadId(92)/: database.sqlite
absurder-sql-mobile/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  settings.gradle
absurder-sql-mobile/android/src/androidTest/kotlin/com/npiesco/absurdersql/: AbsurderSQLInstrumentationTest.kt  ExportHangTest.kt
absurder-sql-mobile/android/src/main/: AndroidManifest.xml
absurder-sql-mobile/android/src/main/java/com/absurdersql/: AbsurderSqlModule.kt  AbsurderSqlPackage.kt
absurder-sql-mobile/android/src/main/java/com/absurdersqlmobile/: AbsurderSqlInitializer.kt  AbsurderSqlInitializerPackage.kt  AbsurderSqlModule.kt  AbsurderSqlPackage.kt
absurder-sql-mobile/android/src/main/kotlin/com/npiesco/absurdersql/: AbsurderSQLModule.kt  AbsurderSQLPackage.kt
absurder-sql-mobile/ios/: AbsurderSQL-Bridging-Header.h  AbsurderSQLBridge.h  AbsurderSQLBridge.m  AbsurderSql.h  AbsurderSql.mm  Podfile
absurder-sql-mobile/ios/AbsurderSQLTests.xcodeproj/: project.pbxproj
absurder-sql-mobile/ios/AbsurderSQLTests.xcodeproj/xcshareddata/xcschemes/: AbsurderSQLTests.xcscheme
absurder-sql-mobile/ios/Tests/: AbsurderSQLBridgeTests.m
absurder-sql-mobile/ios/libabsurder_sql_mobile.xcframework/: Info.plist
absurder-sql-mobile/react-native/: .detoxrc.js  AbsurderSQLBenchmark.tsx  AbsurderSQLTest.tsx  App.tsx  ComparisonBenchmark.tsx  README.md  app.json  metro.config.js  package.json  tsconfig.json
absurder-sql-mobile/react-native/android/: build.gradle  settings.gradle
absurder-sql-mobile/react-native/android/app/: build.gradle
absurder-sql-mobile/react-native/android/app/src/androidTest/java/com/absurdersqltestapp/: DetoxTest.java
absurder-sql-mobile/react-native/android/app/src/main/assets/: index.android.bundle
absurder-sql-mobile/react-native/android/app/src/main/java/com/absurdersqltestapp/: MainActivity.kt  MainApplication.kt
absurder-sql-mobile/react-native/android/app/src/main/res/values/: strings.xml
absurder-sql-mobile/react-native/e2e/: database.test.js
absurder-sql-mobile/react-native/ios/: Podfile
absurder-sql-mobile/react-native/ios/AbsurderSQLTestApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
absurder-sql-mobile/react-native/ios/AbsurderSQLTestApp.xcodeproj/: project.pbxproj
absurder-sql-mobile/react-native/ios/AbsurderSQLTestApp.xcodeproj/xcshareddata/xcschemes/: AbsurderSQLTestApp.xcscheme
absurder-sql-mobile/react-native/ios/AbsurderSQLTestApp.xcworkspace/: contents.xcworkspacedata
absurder-sql-mobile/react-native/types/: jest.d.ts  react-native-safe-area-context.d.ts  react-native-sqlite-storage.d.ts  react-test-renderer.d.ts  watermelondb.d.ts
absurder-sql-mobile/scripts/: build_android.py  build_ios.py  fix_cpp_adapter.py  fix_jcenter.py  test_memory_leaks.py
absurder-sql-mobile/src/: AbsurderDatabase.ts  NativeAbsurderSql.ts  index.ts  lib.rs  main.ts  platformInit.ts  registry.rs
absurder-sql-mobile/src/__tests__/: android_path_resolution_bug_test.rs  cursor_rowid_zero_test.rs  ffi_core_test.rs  ffi_encryption_test.rs  ffi_encryption_vfs_test.rs  ffi_export_import_test.rs  ffi_prepared_statements_test.rs  ffi_streaming_test.rs  ffi_transactions_test.rs  index.test.ts  index_helpers_test.rs  migrations.test.ts  prepared_statement_ffi_test.rs  registry_test.rs  streaming_api_test.rs  uniffi_batch_test.rs  uniffi_create_async_proof.rs  uniffi_create_async_test.rs  uniffi_databaseconfig_test.rs  uniffi_encryption_blocking_test.rs  uniffi_encryption_test.rs  uniffi_execute_params_test.rs  uniffi_execute_test.rs  uniffi_export_import_test.rs  uniffi_index_helpers_test.rs  uniffi_integration_test.rs  uniffi_prepared_statement_result_test.rs  uniffi_prepared_statements_test.rs  uniffi_queryresult_fields_test.rs  uniffi_row_columnvalue_test.rs  uniffi_streaming_test.rs  uniffi_transactions_test.rs
absurder-sql-mobile/src/android_jni/: bindings.rs  mod.rs
absurder-sql-mobile/src/ffi/: core.rs  encryption.rs  export_import.rs  mod.rs  prepared_statements.rs  streaming.rs  transactions.rs
absurder-sql-mobile/src/uniffi_api/: core.rs  mod.rs  types.rs
absurder-sql-mobile/tests/: android_bridge_test.rs  android_build_test.rs  bridge_parameterized_queries_test.rs  error_handling_test.rs  ios_bridge_test.rs  ios_build_test.rs  jni_bindings_test.rs  memory_leak_test.rs  package_structure_test.rs  parameterized_queries_test.rs  transaction_test.rs  typescript_build_test.rs  typescript_query_method_test.rs  typescript_transaction_test.rs
browser-extension/: INSTALLATION.md  (+8 more)
(+1580 files in other folders)
