[package]
name = "absurder-sql-mobile"
version = "0.1.0"
authors = ["Nicholas G. Piesco"]
description = "AbsurderSQL Mobile FFI - React Native bindings for iOS and Android"
license = "AGPL-3.0"
repository = "https://github.com/npiesco/absurder-sql"
edition = "2024"
rust-version = "1.85.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
absurder-sql = { path = "..", features = ["fs_persist"] }

# FFI and C bindings
libc = "0.2"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Thread-safe statics
once_cell = "1.18"
parking_lot = "0.12"

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary
